[project]
name = "lvyatech-scraper"
version = "0.1.0"
description = "Scraper for lvyatech documentation site"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"